--- a/Backend/.env
+++ b/Backend/.env
@@ -4,7 +4,7 @@ JWT_EXPIRES_IN=1d
 MONGO_URI=mongodb://127.0.0.1:27017/schoolBusDB
 
 
-TWILIO_ACCOUNT_SID=ACf828b24a5170756c9c50a5246c741eb8
-TWILIO_AUTH_TOKEN=609cd8dfd30ea6646628a2b1354944dd
-TWILIO_FROM_NUMBER=+16203203615  # your Twilio phone number
+TWILIO_ACCOUNT_SID= # your Twilio account sid
+TWILIO_AUTH_TOKEN= # your Twilio auth token
+TWILIO_FROM_NUMBER= # your Twilio phone number
 
